--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,13 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - uses: actions/setup-java@v3
         with:
           java-version: '11'
           cache: maven
-          distribution: 'adopt'
-      - name: Verify Maven version
-        run: mvn --version
+          distribution: 'temurin'
       - name: Test with Maven
-        run: mvn --batch-mode test --file pom.xml
+        run: mvn --batch-mode --file pom.xml package
