--- a/grain-core/pom.xml
+++ b/grain-core/pom.xml
@@ -12,4 +12,18 @@
     <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>grain-core</name>
+    <dependencies>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.4.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
