--- a/grain-core/pom.xml
+++ b/grain-core/pom.xml
@@ -25,5 +25,11 @@
             <version>4.13.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>1.14.6</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
