consolidated logging configuration; small refactors here and there; configuration now uses static string references

--- a/grain-core/src/main/resources/META-INF/logging.properties
+++ b/grain-core/src/main/resources/META-INF/logging.properties
@@ -1,2 +1,6 @@
 handlers=com._7aske.grain.logging.GrainConsoleHandler
+
 com._7aske.grain.logging.GrainConsoleHandler.formatter=com._7aske.grain.logging.SimpleFormatter
+
+org.hibernate.level=INFO
+org.hibernate.orm.jdbc.bind.handlers=com._7aske.grain.logging.GrainConsoleHandler
