--- a/grain-core/pom.xml
+++ b/grain-core/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>com._7aske.grain</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.1-SNAPSHOT</version>
+        <version>1.0.1</version>
     </parent>
 
     <artifactId>core</artifactId>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
     <name>grain-core</name>
     <dependencies>
