--- a/grain-core/pom.xml
+++ b/grain-core/pom.xml
@@ -3,13 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com._7aske.grain</groupId>
+        <groupId>com.7aske.grain</groupId>
         <artifactId>parent</artifactId>
         <version>1.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>core</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>grain-core</name>
 </project>
