[maven-release-plugin] prepare release parent-1.0.2

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.7aske.grain</groupId>
     <artifactId>parent</artifactId>
-    <version>${revision}</version>
+    <version>1.0.2</version>
     <packaging>pom</packaging>
     <description>Grain web framework</description>
     <name>grain-parent</name>
@@ -15,7 +15,7 @@
     </modules>
 
     <properties>
-        <revision>1.0.2-SNAPSHOT</revision>
+        <revision>1.0.2</revision>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -177,7 +177,7 @@
         <url>https://github.com/7aske/grain.git</url>
         <connection>scm:git:${project.scm.url}</connection>
         <developerConnection>scm:git:${project.scm.url}</developerConnection>
-        <tag>HEAD</tag>
+        <tag>parent-1.0.2</tag>
     </scm>
 
     <pluginRepositories>
