--- a/grain-core/pom.xml
+++ b/grain-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.7aske.grain</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
 
     <artifactId>core</artifactId>
