--- a/pom.xml
+++ b/pom.xml
@@ -201,11 +201,16 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-release-plugin</artifactId>
                         <version>3.0.1</version>
+                        <configuration>
+                            <preparationProfiles>deploy-central</preparationProfiles>
+                            <preparationGoals>central-publishing:publish</preparationGoals>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>release-prepare</id>
                                 <goals>
                                     <goal>prepare</goal>
+                                    <goal>perform</goal>
                                 </goals>
                                 <phase>deploy</phase>
                             </execution>
@@ -220,31 +225,6 @@
                             <publishingServerId>central</publishingServerId>
                             <tokenEnabled>true</tokenEnabled>
                         </configuration>
-                        <executions>
-                            <execution>
-                                <id>publish-central</id>
-                                <goals>
-                                    <goal>publish</goal>
-                                </goals>
-                                <phase>deploy</phase>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-release-plugin</artifactId>
-                        <version>3.0.1</version>
-                        <executions>
-                            <execution>
-                                <id>default</id>
-                                <goals>
-                                    <goal>perform</goal>
-                                </goals>
-                                <configuration>
-                                    <goals>deploy</goals>
-                                </configuration>
-                            </execution>
-                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -284,15 +264,9 @@
                         <version>3.0.1</version>
                         <executions>
                             <execution>
-                                <id>release-prepare</id>
+                                <id>default</id>
                                 <goals>
                                     <goal>prepare</goal>
-                                </goals>
-                                <phase>deploy</phase>
-                            </execution>
-                            <execution>
-                                <id>release-perform</id>
-                                <goals>
                                     <goal>perform</goal>
                                 </goals>
                                 <phase>deploy</phase>
