--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
     </modules>
 
     <properties>
-        <revision>1.0.4-SNAPSHOT</revision>
         <java.version>17</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -30,7 +29,7 @@
             <dependency>
                 <groupId>com.7aske.grain</groupId>
                 <artifactId>core</artifactId>
-                <version>${revision}</version>
+                <version>1.0.4-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
