--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
             <dependency>
                 <groupId>com.7aske.grain</groupId>
                 <artifactId>core</artifactId>
-                <version>1.0.5-SNAPSHOT</version>
+                <version>${project.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
