trying out plugin workflow

--- a/pom.xml
+++ b/pom.xml
@@ -206,7 +206,25 @@
                         </configuration>
                         <executions>
                             <execution>
-                                <id>default</id>
+                                <id>release-prepare</id>
+                                <goals>
+                                    <goal>prepare</goal>
+                                </goals>
+                                <phase>deploy</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-release-plugin</artifactId>
+                        <version>3.0.1</version>
+                        <configuration>
+                            <preparationProfiles>deploy-central</preparationProfiles>
+                            <preparationGoals>central-publishing:publish</preparationGoals>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>release-perform</id>
                                 <goals>
                                     <goal>perform</goal>
                                 </goals>
