--- a/grain-core/pom.xml
+++ b/grain-core/pom.xml
@@ -5,8 +5,7 @@
     <parent>
         <groupId>com.7aske.grain</groupId>
         <artifactId>parent</artifactId>
-        <version>${revision}</version>
-        <relativePath>../pom.xml</relativePath>
+        <version>1.0.6-SNAPSHOT</version>
     </parent>
 
     <artifactId>core</artifactId>
