removed sonatype deployment

--- a/grain-core/pom.xml
+++ b/grain-core/pom.xml
@@ -8,6 +8,7 @@
         <version>1.0.7-SNAPSHOT</version>
     </parent>
 
+    <version>${revision}</version>
     <artifactId>core</artifactId>
     <packaging>jar</packaging>
     <name>grain-core</name>
