--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <project.scm.id>github</project.scm.id>
         <slf4j.version>2.0.7</slf4j.version>
         <junit.version>5.9.3</junit.version>
+        <bytebuddy.version>1.14.10</bytebuddy.version>
     </properties>
 
     <modules>
@@ -36,6 +37,11 @@
     </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>net.bytebuddy</groupId>
+            <artifactId>byte-buddy</artifactId>
+            <version>${bytebuddy.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
