--- a/grain-orm/pom.xml
+++ b/grain-orm/pom.xml
@@ -14,7 +14,7 @@
     <artifactId>grain-orm</artifactId>
     <version>1.0.8-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>grain-web</name>
+    <name>grain-orm</name>
     <dependencies>
         <dependency>
             <groupId>com.7aske.grain</groupId>
