--- a/grain-core/pom.xml
+++ b/grain-core/pom.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
         <groupId>com.7aske.grain</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0.8-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
-    <version>1.0.8-SNAPSHOT</version>
+    <version>1.1.0</version>
     <artifactId>grain-core</artifactId>
     <packaging>jar</packaging>
     <name>grain-core</name>
@@ -18,12 +16,12 @@
         <dependency>
             <groupId>com.7aske.grain</groupId>
             <artifactId>util</artifactId>
-            <version>1.0.8-SNAPSHOT</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.7aske.grain</groupId>
             <artifactId>gtl</artifactId>
-            <version>1.0.8-SNAPSHOT</version>
+            <version>1.1.0</version>
         </dependency>
     </dependencies>
 </project>
