--- a/grain-core/pom.xml
+++ b/grain-core/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <version>1.1.1-SNAPSHOT</version>
-    <artifactId>grain-core</artifactId>
+    <artifactId>core</artifactId>
     <packaging>jar</packaging>
     <name>grain-core</name>
     <dependencies>
