--- a/grain-orm/pom.xml
+++ b/grain-orm/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <groupId>com.7aske.grain</groupId>
-    <artifactId>grain-orm</artifactId>
+    <artifactId>orm</artifactId>
     <version>1.1.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>grain-orm</name>
