--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
         <dependencies>
             <dependency>
                 <groupId>com.7aske.grain</groupId>
-                <artifactId>grain-core</artifactId>
+                <artifactId>core</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
@@ -49,7 +49,7 @@
             </dependency>
             <dependency>
                 <groupId>com.7aske.grain</groupId>
-                <artifactId>grain-orm</artifactId>
+                <artifactId>orm</artifactId>
                 <version>${revision}</version>
             </dependency>
             <dependency>
