--- a/grain-web/pom.xml
+++ b/grain-web/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>com.7aske.grain</groupId>
-            <artifactId>grain-core</artifactId>
+            <artifactId>core</artifactId>
         </dependency>
     </dependencies>
 </project>
