--- a/grain-util/pom.xml
+++ b/grain-util/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.7aske.grain</groupId>
         <artifactId>parent</artifactId>
-        <version>1.1.2-SNAPSHOT</version>
+        <version>1.1.2</version>
     </parent>
 
     <groupId>com.7aske.grain</groupId>
     <artifactId>util</artifactId>
-    <version>1.1.2-SNAPSHOT</version>
+    <version>1.1.2</version>
     <packaging>jar</packaging>
     <name>grain-util</name>
 </project>
