--- a/grain-orm/pom.xml
+++ b/grain-orm/pom.xml
@@ -5,12 +5,12 @@
     <parent>
         <groupId>com.7aske.grain</groupId>
         <artifactId>parent</artifactId>
-        <version>1.1.3-SNAPSHOT</version>
+        <version>1.1.3</version>
     </parent>
 
     <groupId>com.7aske.grain</groupId>
     <artifactId>orm</artifactId>
-    <version>1.1.3-SNAPSHOT</version>
+    <version>1.1.3</version>
     <packaging>jar</packaging>
     <name>grain-orm</name>
     <dependencies>
