--- a/grain-core/pom.xml
+++ b/grain-core/pom.xml
@@ -5,10 +5,10 @@
     <parent>
         <groupId>com.7aske.grain</groupId>
         <artifactId>parent</artifactId>
-        <version>1.1.4-SNAPSHOT</version>
+        <version>1.1.4</version>
     </parent>
 
-    <version>1.1.4-SNAPSHOT</version>
+    <version>1.1.4</version>
     <artifactId>core</artifactId>
     <packaging>jar</packaging>
     <name>grain-core</name>
@@ -16,12 +16,12 @@
         <dependency>
             <groupId>com.7aske.grain</groupId>
             <artifactId>util</artifactId>
-            <version>1.1.4-SNAPSHOT</version>
+            <version>1.1.4</version>
         </dependency>
         <dependency>
             <groupId>com.7aske.grain</groupId>
             <artifactId>gtl</artifactId>
-            <version>1.1.4-SNAPSHOT</version>
+            <version>1.1.4</version>
         </dependency>
     </dependencies>
 </project>
